output.txt
src/KDTree.cu(30): warning: function "medianPartition" was declared but never referenced

src/Pipeline.cu(23): error: class "ssrlcv::Image::Camera" has no member "ecef_offset"

src/PointCloudFactory.cu(3174): warning: invalid narrowing conversion from "unsigned int" to "int"

src/PointCloudFactory.cu(3381): warning: invalid narrowing conversion from "unsigned int" to "int"

src/PointCloudFactory.cu(3533): warning: invalid narrowing conversion from "unsigned int" to "int"

src/PointCloudFactory.cu(3705): warning: invalid narrowing conversion from "unsigned int" to "int"

1 error detected in the compilation of "/tmp/tmpxft_000022e7_00000000-6_Pipeline.cpp1.ii".
make: *** [obj/Pipeline.cu.o] Error 1
make: *** Waiting for unfinished jobs....
/apps/eb/CUDA/10.0.130/bin/..//include/thrust/system/cuda/detail/copy_if.h(753): warning: calling a __host__ function("thrust::detail::aligned_reinterpret_cast<int *, void *> ") from a __host__ __device__ function("thrust::cuda_cub::__copy_if::copy_if< ::thrust::cuda_cub::tag,  ::thrust::device_ptr< ::ssrlcv::DMatch> ,  ::thrust::cuda_cub::__copy_if::no_stencil_tag_ *,  ::thrust::device_ptr< ::ssrlcv::DMatch> ,  ::thrust::detail::unary_negate< ::ssrlcv::_NV_ANON_NAMESPACE::validate> > ") is not allowed

/apps/eb/CUDA/10.0.130/bin/..//include/thrust/system/cuda/detail/copy_if.h(753): warning: calling a __host__ function("thrust::detail::aligned_reinterpret_cast<int *, void *> ") from a __host__ __device__ function("thrust::cuda_cub::__copy_if::copy_if< ::thrust::cuda_cub::tag,  ::thrust::device_ptr< ::ssrlcv::uint2_pair> ,  ::thrust::cuda_cub::__copy_if::no_stencil_tag_ *,  ::thrust::device_ptr< ::ssrlcv::uint2_pair> ,  ::thrust::detail::unary_negate< ::ssrlcv::_NV_ANON_NAMESPACE::validate> > ") is not allowed

/apps/eb/CUDA/10.0.130/bin/..//include/thrust/system/cuda/detail/copy_if.h(753): warning: calling a __host__ function("thrust::detail::aligned_reinterpret_cast<int *, void *> ") from a __host__ __device__ function("thrust::cuda_cub::__copy_if::copy_if< ::thrust::cuda_cub::tag,  ::thrust::device_ptr< ::ssrlcv::DMatch> ,  ::thrust::cuda_cub::__copy_if::no_stencil_tag_ *,  ::thrust::device_ptr< ::ssrlcv::DMatch> ,  ::thrust::detail::unary_negate< ::ssrlcv::_NV_ANON_NAMESPACE::match_dist_thresholder> > ") is not allowed

/apps/eb/CUDA/10.0.130/bin/..//include/thrust/system/cuda/detail/copy_if.h(753): warning: calling a __host__ function("thrust::detail::aligned_reinterpret_cast<int *, void *> ") from a __host__ __device__ function("thrust::cuda_cub::__copy_if::copy_if< ::thrust::cuda_cub::tag,  ::thrust::device_ptr< ::ssrlcv::FeatureMatch< ::ssrlcv::SIFT_Descriptor> > ,  ::thrust::cuda_cub::__copy_if::no_stencil_tag_ *,  ::thrust::device_ptr< ::ssrlcv::FeatureMatch< ::ssrlcv::SIFT_Descriptor> > ,  ::thrust::detail::unary_negate< ::ssrlcv::_NV_ANON_NAMESPACE::match_dist_thresholder> > ") is not allowed

/apps/eb/CUDA/10.0.130/bin/..//include/thrust/system/cuda/detail/copy_if.h(753): warning: calling a __host__ function("thrust::detail::aligned_reinterpret_cast<int *, void *> ") from a __host__ __device__ function("thrust::cuda_cub::__copy_if::copy_if< ::thrust::cuda_cub::tag,  ::thrust::device_ptr< ::ssrlcv::FeatureMatch< ::ssrlcv::Window_3x3> > ,  ::thrust::cuda_cub::__copy_if::no_stencil_tag_ *,  ::thrust::device_ptr< ::ssrlcv::FeatureMatch< ::ssrlcv::Window_3x3> > ,  ::thrust::detail::unary_negate< ::ssrlcv::_NV_ANON_NAMESPACE::match_dist_thresholder> > ") is not allowed

/apps/eb/CUDA/10.0.130/bin/..//include/thrust/system/cuda/detail/copy_if.h(753): warning: calling a __host__ function("thrust::detail::aligned_reinterpret_cast<int *, void *> ") from a __host__ __device__ function("thrust::cuda_cub::__copy_if::copy_if< ::thrust::cuda_cub::tag,  ::thrust::device_ptr< ::ssrlcv::FeatureMatch< ::ssrlcv::Window_9x9> > ,  ::thrust::cuda_cub::__copy_if::no_stencil_tag_ *,  ::thrust::device_ptr< ::ssrlcv::FeatureMatch< ::ssrlcv::Window_9x9> > ,  ::thrust::detail::unary_negate< ::ssrlcv::_NV_ANON_NAMESPACE::match_dist_thresholder> > ") is not allowed

/apps/eb/CUDA/10.0.130/bin/..//include/thrust/system/cuda/detail/copy_if.h(753): warning: calling a __host__ function("thrust::detail::aligned_reinterpret_cast<int *, void *> ") from a __host__ __device__ function("thrust::cuda_cub::__copy_if::copy_if< ::thrust::cuda_cub::tag,  ::thrust::device_ptr< ::ssrlcv::FeatureMatch< ::ssrlcv::Window_15x15> > ,  ::thrust::cuda_cub::__copy_if::no_stencil_tag_ *,  ::thrust::device_ptr< ::ssrlcv::FeatureMatch< ::ssrlcv::Window_15x15> > ,  ::thrust::detail::unary_negate< ::ssrlcv::_NV_ANON_NAMESPACE::match_dist_thresholder> > ") is not allowed

/apps/eb/CUDA/10.0.130/bin/..//include/thrust/system/cuda/detail/copy_if.h(753): warning: calling a __host__ function("thrust::detail::aligned_reinterpret_cast<int *, void *> ") from a __host__ __device__ function("thrust::cuda_cub::__copy_if::copy_if< ::thrust::cuda_cub::tag,  ::thrust::device_ptr< ::ssrlcv::FeatureMatch< ::ssrlcv::Window_25x25> > ,  ::thrust::cuda_cub::__copy_if::no_stencil_tag_ *,  ::thrust::device_ptr< ::ssrlcv::FeatureMatch< ::ssrlcv::Window_25x25> > ,  ::thrust::detail::unary_negate< ::ssrlcv::_NV_ANON_NAMESPACE::match_dist_thresholder> > ") is not allowed

/apps/eb/CUDA/10.0.130/bin/..//include/thrust/system/cuda/detail/copy_if.h(753): warning: calling a __host__ function("thrust::detail::aligned_reinterpret_cast<int *, void *> ") from a __host__ __device__ function("thrust::cuda_cub::__copy_if::copy_if< ::thrust::cuda_cub::tag,  ::thrust::device_ptr< ::ssrlcv::FeatureMatch< ::ssrlcv::Window_31x31> > ,  ::thrust::cuda_cub::__copy_if::no_stencil_tag_ *,  ::thrust::device_ptr< ::ssrlcv::FeatureMatch< ::ssrlcv::Window_31x31> > ,  ::thrust::detail::unary_negate< ::ssrlcv::_NV_ANON_NAMESPACE::match_dist_thresholder> > ") is not allowed

/apps/eb/CUDA/10.0.130/bin/..//include/thrust/system/cuda/detail/copy_if.h(753): warning: calling a __host__ function("thrust::detail::aligned_reinterpret_cast<int *, void *> ") from a __host__ __device__ function("thrust::cuda_cub::__copy_if::copy_if< ::thrust::cuda_cub::tag,  ::thrust::device_ptr< ::ssrlcv::Match> ,  ::thrust::cuda_cub::__copy_if::no_stencil_tag_ *,  ::thrust::device_ptr< ::ssrlcv::Match> ,  ::thrust::detail::unary_negate< ::ssrlcv::_NV_ANON_NAMESPACE::validate> > ") is not allowed

src/PointCloudFactory.cu(3174): warning: invalid narrowing conversion from "unsigned int" to "int"

src/PointCloudFactory.cu(3381): warning: invalid narrowing conversion from "unsigned int" to "int"

src/PointCloudFactory.cu(3533): warning: invalid narrowing conversion from "unsigned int" to "int"

src/PointCloudFactory.cu(3705): warning: invalid narrowing conversion from "unsigned int" to "int"

src/PointCloudFactory.cu: In member function ‘void ssrlcv::PointCloudFactory::deterministicStatisticalFilter(ssrlcv::MatchSet*, std::vector<ssrlcv::ptr::value<ssrlcv::Image> >, float, float)’:
src/PointCloudFactory.cu:3174:67: warning: narrowing conversion of ‘k_adjust’ from ‘unsigned int’ to ‘int’ inside { } [-Wnarrowing]
         matchSet->matches->host.get()[k_bundle] = {k_lines,k_adjust};
                                                                   ^
src/PointCloudFactory.cu: In member function ‘void ssrlcv::PointCloudFactory::nonDeterministicStatisticalFilter(ssrlcv::MatchSet*, std::vector<ssrlcv::ptr::value<ssrlcv::Image> >, float, float)’:
src/PointCloudFactory.cu:3381:67: warning: narrowing conversion of ‘k_adjust’ from ‘unsigned int’ to ‘int’ inside { } [-Wnarrowing]
         matchSet->matches->host.get()[k_bundle] = {k_lines,k_adjust};
                                                                   ^
src/PointCloudFactory.cu: In member function ‘void ssrlcv::PointCloudFactory::linearCutoffFilter(ssrlcv::MatchSet*, std::vector<ssrlcv::ptr::value<ssrlcv::Image> >, float)’:
src/PointCloudFactory.cu:3533:67: warning: narrowing conversion of ‘k_adjust’ from ‘unsigned int’ to ‘int’ inside { } [-Wnarrowing]
         matchSet->matches->host.get()[k_bundle] = {k_lines,k_adjust};
                                                                   ^
src/PointCloudFactory.cu: In member function ‘void ssrlcv::PointCloudFactory::planarCutoffFilter(ssrlcv::MatchSet*, std::vector<ssrlcv::ptr::value<ssrlcv::Image> >, float)’:
src/PointCloudFactory.cu:3705:67: warning: narrowing conversion of ‘k_adjust’ from ‘unsigned int’ to ‘int’ inside { } [-Wnarrowing]
       matchSet->matches->host.get()[k_bundle] = {k_lines,k_adjust};
                                                                   ^
